Removed unused compiler directive