@@ -18,7 +18,6 @@ application {
     mainClass.set("ru.isma.next.app.launcher.IsmaApplication")
 
     applicationDefaultJvmArgs = listOf(
-        "--add-modules=jdk.incubator.vector",
         //"--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED",
         //"--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED"
     )
